# chatbot

./: .gitignore  Modelfile  app.config.ts  biome.json  chat.db  makefile  package-lock.json  package.json  sample.json
pipeline/: .gitignore  pyproject.toml
pipeline/src/pipeline/: main.py
pipeline/src/pipeline/chunking/: main.py
pipeline/src/pipeline/vector_search/: main.py
pipeline/src/pipeline/web_search/: main.py
protos/: llm.proto
protos/llm/: llm_service.proto  post_text_request.proto  post_text_response.proto  prompt.proto  role.proto  type.proto
protos/scraper/: get_content_request.proto  get_content_response.proto  scrape.proto  scrape_service.proto
scripts/: crawler.py  example.py
src/: app.css  app.tsx  entry-client.tsx  entry-server.tsx
src/components/: Layout.tsx  Nav.tsx
src/features/conversation/data-access/: crud.ts
src/features/conversation/domain/: domain.ts  service.ts
src/features/conversation/ui/: Insert.tsx  List.tsx  ListDetails.tsx  Main.tsx
src/features/message/data-access/: crud.ts
src/features/message/domain/: domain.ts  service.ts
src/features/message/ui/: Input.tsx  List.tsx  (+2 more)
src/libraries/: db.ts  logger.ts  markdown.ts  markdownTable.ts  process.ts
src/libraries/protos/: asyncClient.ts
src/routes/: [...404].tsx  about.tsx
src/routes/(static)/: [id].tsx  index.tsx
tools/: patch_pb_imports.py
tools/language_model/: README.md  main.py  pyproject.toml  service.py
tools/language_model/protos/: llm_service_grpc.py  llm_service_pb2.py  llm_service_pb2.pyi  post_text_request_grpc.py  post_text_request_pb2.py  post_text_request_pb2.pyi  post_text_response_grpc.py  post_text_response_pb2.py  post_text_response_pb2.pyi  prompt_grpc.py  prompt_pb2.py  prompt_pb2.pyi  role_grpc.py  role_pb2.py  role_pb2.pyi  type_grpc.py  type_pb2.py  type_pb2.pyi
tools/language_model/src/: service.py
tools/language_model/utils/: search_prompt.py
tools/scraper/: README.md  main.py  pyproject.toml  service.py
tools/scraper/protos/: get_content_request_grpc.py  get_content_request_pb2.py  get_content_request_pb2.pyi  get_content_response_grpc.py  get_content_response_pb2.py  get_content_response_pb2.pyi  scrape_grpc.py  scrape_pb2.py  scrape_pb2.pyi  scrape_service_grpc.py  scrape_service_pb2.py  scrape_service_pb2.pyi
tools/scraper/utils/: flatten.py  logger.py
tools/visual_model/: main.py  pyproject.toml
tools/visual_model/src/: service.py
(+29 files in other folders)
