[project]
name = "pipeline"
version = "0.1.0"
description = "A pipeline for chatbot project"
readme = "README.md"
authors = [
    { name = "dgrimaldi92", email = "grimi.david@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.2",
    "huggingface-hub>=0.34.3",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "orjson>=3.11.1",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
]

[project.scripts]
web-search = "web-search:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff.lint]
select = ["ERA", "YTT", "ANN", "ASYNC", "S", "FBT", "B", "A", "COM", "C4", "DTZ", "EM", "FIX", "FA", "ISC", "ICN", "LOG", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "TID", "TC", "ARG", "PTH", "FLY", "C90", "NPY", "N", "PERF", "E", "F", "UP", "SIM", "I"]
fixable = ["ALL"]

[tool.uv.workspace]
members = [
    "src/pipeline/web-search",
]
